aws-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: solr-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: solr-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: solr
              servicePort: 8983
