local-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solr-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solr
            port:
              number: 8983
